[tool.poetry]
name = "repl-nix-career-website"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]
readme = "README.md"
packages = [{include = "repl_nix_career_website"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
